--- a/front-end/src/pages/Home.css
+++ b/front-end/src/pages/Home.css
@@ -3,7 +3,7 @@
   margin-left: 50px;
   margin-right: 50px;
   padding: 2%;
-  background-color: #051a42;
+  background-color: #130A3E;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5%;
