big css and scss changes, still need to refactor css into scss

--- a/front-end/src/pages/Footer.scss
+++ b/front-end/src/pages/Footer.scss
@@ -1,11 +1,9 @@
 .footer {
-    background-color: #333;
+    background-color: #0A042A;
     color: #fff;
     padding: 40px 20px;
-    width: 100%;
-    height: 10vh;
+    margin-top: auto;
 
-  
     &__content {
     display: flex;
     justify-content: space-between;
