--- a/front-end/src/components/NavBar.css
+++ b/front-end/src/components/NavBar.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   background-color: #001b46;
   top: 0;
   left: 0;
@@ -8,9 +8,9 @@
 .nav {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  height: 100px;
   font-size: 25px;
   font-weight: bold;
-  padding-top: 10px;
   font-weight: unset;
   z-index: 101;
   justify-content: center;
@@ -44,8 +44,8 @@
 }
 
 .nav-logo {
-  padding-left: 20px;
-  padding-bottom: 15px;
+  width: 100%;
+  height: auto;
 }
 
 .nav-logo:hover {
@@ -59,7 +59,94 @@
 
 .trending-link {
   text-align: center;
+} */
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #120A3B;
+  height: 80px;
+  margin-bottom: 5%;
 }
+
+.nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: larger;
+}
+
+.nav-link:hover {
+  color: #EF9BC3;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  text-align: left;
+  background-color: #120A3B;
+  padding: 15px;
+  font-size: smaller;
+  
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu li {
+  margin-bottom: 5px;
+  width: 400px; /* Adjust the width as desired */
+  padding-top: 20px; 
+}
+
+.nav-logo {
+  height: 100px;
+}
+
+.nav-link {
+  text-align: center;
+  margin-right: 20px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  max-height: 80px;
+}
+
+.nav-link div {
+  max-height: 80px;
+}
+
+.tab {
+  padding: 8px 16px;
+  background-color: #F5C7C8;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.show {
+  display: inline-block;
+}
+
+.hide {
+  display: none;
+}
+
+
 
 @media screen and (max-width: 1024px) {
   .nav {
