--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -10,7 +10,7 @@
     &__firstPage {
       display: flex; /* Use flexbox to position elements */
       justify-content: space-between; /* Align children to opposite ends */
-      height: 100vh;
+      height: 90vh;
     }
   
     &__textContainer {
@@ -89,13 +89,38 @@
             text-decoration: none;
         }
     }
+
+    hr {
+
+        width: 100%;
+    }
   
     &__nextPage {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      margin-top: 20px; /* Add some space below the firstPage section */
-      height: 50vh;
-      align-items: center;
+        display: grid;
+          grid-template-columns: repeat(3, 1fr);
+        // align-items: stretch; /* Stretch items vertically to have the same height */
+        margin-top: 20px; /* Add some space below the firstPage section */
+        color: $snow_white;
+        height: 80vh;
+        align-items: center;
+
+
+        div {
+          display: flex; /* Use flexbox for the inner divs */
+          flex-direction: column; /* Stack elements vertically */
+          align-items: center; /* Center items horizontally */
+          text-align: center; /* Center text */
+        }
+      
+        h3 {
+          color: $rose_quartz;
+        }
+      
+        img {
+          height: 200px; /* Take up full height of the container */
+          width: auto;
+          border-radius: 30px;
+        }
     }
   }
   
