Added about pictures and added placeholder hover on nav logo

--- a/front-end/src/components/NavBar.css
+++ b/front-end/src/components/NavBar.css
@@ -52,6 +52,11 @@ nav li {
 
 .nav-logo {
   height: 100px;
+  
+}
+
+.nav-logo:hover {
+  filter: drop-shadow(10px 10px 20px red);
 }
 
 .nav-link {
