--- a/front-end/src/pages/About.scss
+++ b/front-end/src/pages/About.scss
@@ -52,6 +52,8 @@
 
   &__headshot {
     border-radius: 100%;
+    height: auto;
+    width: 60%;
   }
 
   &__bioSection {
@@ -94,7 +96,7 @@
   }
 
   &__icon:hover {
-    filter: drop-shadow(0px 0px 15px $cherry);
+    filter: drop-shadow(0px 15px 25px $cherry);
   }
 }
 
