--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -81,7 +81,7 @@
             font-size: large;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-weight: bolder;
-            color: $midnight_plum;
+            color: $cherry;
             margin: 0px 10px;
             text-decoration: none;
         }
