--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -67,7 +67,7 @@
 
     &__startButton {
         display: flex;
-        background-color: #fff;
+        background-color: $snow_white;
         border-radius: 20px;
         border: none;
         height: 3em;
