--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -8,8 +8,8 @@
     min-height: 100%;
   
     &__firstPage {
-      display: flex; /* Use flexbox to position elements */
-      justify-content: space-between; /* Align children to opposite ends */
+      display: flex; 
+      justify-content: space-between;
       height: 90vh;
     }
   
@@ -92,8 +92,7 @@
     }
   
     &__nextPage {
-        // align-items: stretch; /* Stretch items vertically to have the same height */
-        margin-top: 20px; /* Add some space below the firstPage section */
+        margin-top: 20px;
         color: $snow_white;
         height: 80vh;
         text-align: center;
@@ -105,10 +104,10 @@
         }
 
         &__gridCell {
-          display: flex; /* Use flexbox for the inner divs */
-          flex-direction: column; /* Stack elements vertically */
-          align-items: center; /* Center items horizontally */
-          text-align: center; /* Center text */
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
         }
         section {
             width: 50%;
@@ -123,7 +122,7 @@
         }
       
         img {
-          height: 200px; /* Take up full height of the container */
+          height: 200px;
           width: auto;
           border-radius: 30px;
         }
