--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -30,7 +30,7 @@
 
     &__quote {
         color: $snow_white;
-        width: 80%;
+        width: 50%;
         margin: auto;
         margin-top: 20px;
     }
@@ -68,6 +68,7 @@
     &__startButton {
         display: flex;
         background-color: $snow_white;
+        margin: 20px 0px 20px 0px;
         border-radius: 20px;
         border: none;
         height: 3em;
@@ -75,7 +76,6 @@
         overflow: visible;
         padding: 20px 40px;
         align-items: center;
-        margin: auto;
         cursor: pointer;
         span {
             font-size: large;
