--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -109,6 +109,10 @@
           flex-direction: column;
           align-items: center;
           text-align: center;
+
+          p {
+            width: 70%;
+          }
         }
 
         &__summary {
