--- a/front-end/src/pages/Footer.scss
+++ b/front-end/src/pages/Footer.scss
@@ -16,18 +16,21 @@
   
     &__logo {
       display: flex;
+      text-align: left;
       align-items: center;
+      gap: 20px;
 
       h2 {
         font-size: 24px;
         font-weight: bold;
+        flex-shrink: 0;
       }
 
       &__mobileAppLogo {
-        width: 40%;
+        text-align: left;
       }
       img {
-        width: 100px;
+        width: 30%;
         height: auto;
         cursor: pointer;
       }
@@ -39,7 +42,7 @@
       }
     
       &__legal,
-      &__navList {
+      &__navList, &__social {
         flex: 1;
         text-align: left;
         max-width: 200px;
