--- a/front-end/src/assets/utils/_colors.scss
+++ b/front-end/src/assets/utils/_colors.scss
@@ -1,5 +1,7 @@
-$rose_quartz: #F1ACC5;
+$rose_quartz: #F3B3C6; //this color is in between the two logo colors
+$logo_light_pink: #F7CDC9;
+$logo_dark_pink: #ED95C2;
+$cherry: #CD2D64;
+$snow_white: #FFFFFF;
 $midnight_plum: #120A3B;
 $noir: #0A042A;
-$snow_white: #FFFFFF;
-$cherry: #CD2D64;
