--- a/front-end/src/components/NavBar.scss
+++ b/front-end/src/components/NavBar.scss
@@ -40,7 +40,7 @@
 
     li {
       margin-bottom: 5px;
-      width: 400px; /* Adjust the width as desired */
+      width: 400px;
       padding-top: 20px; 
     }
     
@@ -72,18 +72,36 @@
     }
   }
 
-  &__loginButton {
-    padding: 8px 16px;
-    background-color: $rose_quartz;
-    color: $snow_white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  &__loginButtonWrapper {
+    display: flex;
+
+    button {
+      min-width: 144px;
+      height: auto;
+      padding: 10px;
+      font-weight: bold;
+      font-size: large;
+      border: none;
+    }
+
+    #sign-in-button {
+      border-radius: 20px;
+      color: $midnight_plum;
+      margin-right: 20px;
+      background-image: linear-gradient(to left, $logo_light_pink, $logo_dark_pink);
+      // transition: background-color 0.3s ease-in-out;
+    }
+
+    #sign-in-button:hover {
+      cursor: pointer;
+      background-image: linear-gradient(to left, rgba($logo_light_pink, 0.6), rgba($logo_dark_pink, 0.6));
+    }
+    
   }
 
-  &__show {
-    display: inline-block;
-  }
+  // &__show {
+  //   display: inline-block;
+  // }
 
   &__hide {
     display: none;
