--- a/front-end/src/components/Nav.scss
+++ b/front-end/src/components/Nav.scss
@@ -1,6 +1,6 @@
 @import '../assets/utils/_colors.scss';
 
-.navBar {
+.nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -89,7 +89,6 @@
       color: $midnight_plum;
       margin-right: 20px;
       background-image: linear-gradient(to left, $logo_light_pink, $logo_dark_pink);
-      // transition: background-color 0.3s ease-in-out;
     }
 
     #sign-in-button:hover {
@@ -116,7 +115,7 @@
   #nav-loggedin {
     font-size: 18px;
   }
-  .navBar__link {
+  .nav__link {
     padding-top: 5px;
     padding-bottom: 5px;
   }
@@ -131,7 +130,7 @@
 //   .nav {
 //     font-size: 16px;
 //   }
-//   .navBar__link {
+//   .nav__link {
 //     padding-bottom: 15px;
 //   }
 //   .nav {
