--- a/front-end/src/components/auth/UserSignUp.scss
+++ b/front-end/src/components/auth/UserSignUp.scss
@@ -1,11 +1,19 @@
-@import '../assets/utils/_colors.scss';
+@import '../../assets/utils/colors';
 
-.signIn {
+.signUp {
   text-align: center;
   justify-content: center;
   display: flex;
   min-height: 100%;
+  color: $noir;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+  label {
+    display: flex;
+    width: 25%;
+    text-align: left;
+    align-items: center;
+  }
 
   input {
     border-radius: 5px;
@@ -14,13 +22,6 @@
     border: 1px solid;
     margin-left: 7%;
     margin-right: 7%;
-  }
-
-  label {
-    display: flex;
-    width: 25%;
-    text-align: left;
-    align-items: center;
   }
 
   &__container {
@@ -37,20 +38,29 @@
     justify-content: center;
   }
 
-  #forgot-password:hover {
-    cursor: pointer;
-    text-decoration: underline;
+  &__signUpButton {
+    display: flex;
+    background-color: $snow_white;
+    border-radius: 20px;
+    border: 1px solid $noir;
+    height: 1em;
+    overflow: visible;
+    padding: 20px 40px;
+    align-items: center;
+    margin: auto;
+    font-size: medium;
   }
+ 
 }
 
 @media screen and (max-width: 1024px) {
-  .sign-in-section-container {
+  .sign-up-container {
     width: 50%;
   }
 }
 
 @media screen and (max-width: 690px) {
-  .sign-in-section-container {
+  .sign-up-container {
     width: 80%;
   }
 }
