--- a/front-end/src/components/LoginMethod.scss
+++ b/front-end/src/components/LoginMethod.scss
@@ -7,11 +7,13 @@
         margin: 3px auto 3px auto;
 
         &__loginLink {
-            display: inline-block;
+            display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
             width: 100%;
+            text-decoration: none;
+            color: $noir;
     
             img {
                 width: 24px;
