--- a/front-end/src/pages/Footer.scss
+++ b/front-end/src/pages/Footer.scss
@@ -1,103 +1,109 @@
 @import '../assets/utils/_colors.scss';
 
 .footer {
-    background-color: $noir;
-    color: $snow_white;
-    padding: 20px 100px 10px 100px;
-    margin-top: auto;
-    height: 40vh;
-    margin-top: 5%;
+  background-color: $noir;
+  color: $snow_white;
+  padding: 20px 100px 10px 100px;
+  height: 40vh;
+  margin-top: 5%;
 
-    &__content {
+  &__content {
     display: flex;
     align-items: center;
     text-align: center;
-    }
+  }
   
-    &__logo {
-      display: flex;
+  &__logo {
+    display: flex;
+    text-align: left;
+    align-items: center;
+    gap: 20px;
+
+    h2 {
+      font-size: 24px;
+      font-weight: bold;
+      flex-shrink: 0;
+    }
+
+    &__mobileAppLogo {
       text-align: left;
-      align-items: center;
-      gap: 20px;
+    }
 
-      h2 {
-        font-size: 24px;
-        font-weight: bold;
-        flex-shrink: 0;
+    img {
+      width: 30%;
+      height: auto;
+       cursor: pointer;
+    }
+  }
+  
+  &__navigationContainer {
+      display: flex;
+      align-items: flex-start;
+    }
+    
+    &__legal,
+    &__navList, &__social {
+      flex: 1;
+      text-align: left;
+      max-width: 200px;
+      margin-right: 10%;
+    
+      h5 {
+        margin-top: 0;
+        margin-bottom: 5px;
+        font-size: large;
+      }
+    
+      ul {
+        padding-left: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+        list-style-type: none;
+    
+        li {
+          margin-bottom: 5px;
+        }
+
+        a {
+          color: $snow_white;
+          text-decoration: none;
+        }
+        a:hover {
+          color: $cherry;
+        }
+      }
+    }
+        
+    &__social {
+      text-align: left;
+      font-size: large;
+
+      h5 {
+        margin: 0;
       }
 
-      &__mobileAppLogo {
-        text-align: left;
+      ul {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        list-style-type: none;
       }
-      img {
-        width: 30%;
-        height: auto;
+
+      img:hover {
+        filter: drop-shadow(0 0 0.75rem $cherry);
         cursor: pointer;
       }
-    }
-  
-      &__navigationContainer {
-        display: flex;
-        align-items: flex-start;
-      }
-    
-      &__legal,
-      &__navList, &__social {
-        flex: 1;
-        text-align: left;
-        max-width: 200px;
-        margin-right: 10%;
-    
-        h5 {
-          margin-top: 0;
-          margin-bottom: 5px; /* Add a small margin below the h5 element */
-          font-size: large;
-        }
-    
-        ul {
-          padding-left: 0;
-          margin-top: 0;
-          margin-bottom: 0;
-          list-style-type: none; /* Remove the default bullet points */
-    
-          li {
-            margin-bottom: 5px; /* Add some vertical spacing between li elements */
-          }
 
-          a {
-            color: $snow_white;
-            text-decoration: none;
-          }
-          a:hover {
-            color: $cherry;
-          }
-        }
-      }
-        
-      &__social {
-        text-align: left;
-        font-size: large;
-        h5 {
-          margin: 0;
-        }
-        ul {
-          display: grid;
-          grid-template-columns: repeat(4, 1fr);
-          list-style-type: none;
-        }
-        img:hover {
-          filter: drop-shadow(0 0 0.75rem $cherry);
-          cursor: pointer;
-        }
-      }
+    }
 
     
     &__bottom {
       margin-top: 20px;
       margin: auto;
+
       p {
         font-size: 14px;
       }
+      
     }
   
 }
