Added new color, refactored landing page to scss

--- a/front-end/src/assets/utils/_colors.scss
+++ b/front-end/src/assets/utils/_colors.scss
@@ -3,5 +3,6 @@ $logo_light_pink: #F7CDC9;
 $logo_dark_pink: #ED95C2;
 $cherry: #CD2D64;
 $snow_white: #FFFFFF;
+$dim_snow_white: #e0e0e0;
 $midnight_plum: #120A3B;
 $noir: #0A042A;
