--- a/front-end/src/components/auth/UserSignIn.scss
+++ b/front-end/src/components/auth/UserSignIn.scss
@@ -8,20 +8,23 @@
   min-height: 100%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-  input {
-    border-radius: 5px;
-    width: 50%;
-    height: 2em;
-    border: 1px solid;
-    margin-left: 7%;
-    margin-right: 7%;
-  }
+  &__inputLabelWrap {
+    
+      input {
+      border-radius: 5px;
+      width: 50%;
+      height: 2em;
+      border: 1px solid;
+      margin-left: 7%;
+      margin-right: 7%;
+    }
 
-  label {
-    display: flex;
-    width: 25%;
-    text-align: left;
-    align-items: center;
+    label {
+      display: flex;
+      width: 25%;
+      text-align: left;
+      align-items: center;
+    }
   }
 
   &__container {
@@ -31,6 +34,36 @@
     width: 30%;
     padding: 3%;
     margin: 3%;
+
+    &__loginSubmitInput {
+      width: 40%;
+      padding: 5px 20px;
+      background-color: $snow_white;
+      color: $cherry;
+      border-radius: 20px;
+      border: 1px solid $noir;
+      font-size: large;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    &__loginSubmitInput:hover {
+      background-color: $dim_snow_white;
+    }
+
+    &__authLink {
+      text-decoration: none;
+    }
+
+    &__authLink:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+
+    &__navLink {
+      font-weight: bold;
+      color: $cherry;
+    }
   }
 
   &__inputLabelWrap{
@@ -38,10 +71,6 @@
     justify-content: center;
   }
 
-  #forgot-password:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
 }
 
 @media screen and (max-width: 1024px) {
