--- a/front-end/src/components/auth/UserSignUp.scss
+++ b/front-end/src/components/auth/UserSignUp.scss
@@ -8,20 +8,23 @@
   color: $noir;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-  label {
-    display: flex;
-    width: 25%;
-    text-align: left;
-    align-items: center;
-  }
+  &__inputLabelWrap {
 
-  input {
-    border-radius: 5px;
-    width: 50%;
-    height: 2em;
-    border: 1px solid;
-    margin-left: 7%;
-    margin-right: 7%;
+    label {
+      display: flex;
+      width: 25%;
+      text-align: left;
+      align-items: center;
+    }
+
+    input {
+      border-radius: 5px;
+      width: 50%;
+      height: 2em;
+      border: 1px solid;
+      margin-left: 7%;
+      margin-right: 7%;
+    }
   }
 
   &__container {
@@ -31,24 +34,37 @@
     width: 30%;
     padding: 3%;
     margin: 3%;
+
+    &__loginSubmitInput {
+      width: 40%;
+      padding: 5px 20px;
+      background-color: $snow_white;
+      color: $cherry;
+      border-radius: 20px;
+      border: 1px solid $noir;
+      font-size: large;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    &__loginSubmitInput:hover {
+      background-color: $dim_snow_white;
+    }
+
+    &__navLink {
+      text-decoration: none;
+      font-weight: bold;
+      color: $cherry;
+    }
+
+    &__navLink:hover {
+      text-decoration: underline;
+    }
   }
 
   &__inputLabelWrap{
     display: flex;
     justify-content: center;
-  }
-
-  &__signUpButton {
-    display: flex;
-    background-color: $snow_white;
-    border-radius: 20px;
-    border: 1px solid $noir;
-    height: 1em;
-    overflow: visible;
-    padding: 20px 40px;
-    align-items: center;
-    margin: auto;
-    font-size: medium;
   }
  
 }
