--- a/front-end/src/assets/utils/_colors.scss
+++ b/front-end/src/assets/utils/_colors.scss
@@ -2,6 +2,7 @@ $rose_quartz: #F3B3C6; //this color is in between the two logo colors
 $logo_light_pink: #F7CDC9;
 $logo_dark_pink: #ED95C2;
 $cherry: #CD2D64;
+$dim_cherry: #b02858;
 $snow_white: #FFFFFF;
 $dim_snow_white: #e0e0e0;
 $midnight_plum: #120A3B;
