--- a/front-end/src/components/Nav.scss
+++ b/front-end/src/components/Nav.scss
@@ -41,11 +41,11 @@
     background-color: $noir;
     padding: 15px;
     font-size: smaller;
+    z-index: 1;
 
     li {
       margin-bottom: 5px;
-      // width: 300px;
-      padding-top: 15px; 
+      padding: 15px 0px 3px 0px; 
     }
     
   }
