Changed border color for account creation for easier differential

--- a/front-end/src/components/auth/UserSignUp.scss
+++ b/front-end/src/components/auth/UserSignUp.scss
@@ -28,7 +28,7 @@
   }
 
   &__container {
-    border: 5px solid $rose_quartz;
+    border: 5px solid $cherry;
     border-radius: 25px;
     background-color: $noir;
     width: 30%;
