Added new purple, organized colors by shade for dev

--- a/front-end/src/assets/utils/_colors.scss
+++ b/front-end/src/assets/utils/_colors.scss
@@ -1,9 +1,15 @@
+//base pink shades
 $rose_quartz: #F3B3C6; //this color is in between the two logo colors
 $logo_light_pink: #F7CDC9;
 $logo_dark_pink: #ED95C2;
 $cherry: #CD2D64;
 $dim_cherry: #b02858;
+
+//base white shades
 $snow_white: #FFFFFF;
 $dim_snow_white: #e0e0e0;
+
+//base purple shades
 $midnight_plum: #120A3B;
+$dark_amethyst: #1F184E;
 $noir: #0A042A;
