--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,9 +1,10 @@
+@import './assets/utils/_colors.scss';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    background-color: #130A3E;
+    background-color: $dark_amethyst;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
