--- a/front-end/src/components/venues/ShowVenue.scss
+++ b/front-end/src/components/venues/ShowVenue.scss
@@ -8,7 +8,7 @@
   }
 
   &__reviewGrid {
-    display: grid;
+    // display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     justify-items: center;
