--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -1,4 +1,5 @@
 @import '../assets/utils/_colors.scss';
+// @import '../../assets/home_page_images/splashimage'
 .home {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
@@ -9,18 +10,34 @@
   
     &__firstPage {
       display: flex; 
-      justify-content: space-between;
-      height: 80vh;
+      justify-content: center;
+      height: 90vh;
     }
   
-    &__textContainer {
-      width: 100%;
+    &__firstContainer {
+      display: flex;
+      width: 85%;
+      background: url("../assets/home_page_images/splashimage.jpeg") no-repeat center center fixed; 
+      background-size: cover;
+      background-attachment: scroll;
+      text-align: center;
+      align-items: center;
+
+      &__middleContainer {
+        max-width: 70%;
+        padding: 16px 16px 12px;
+        max-height: 40%;
+        margin: 0 auto;
+        text-align: center;
+        background-color: rgba($noir, 0.85);
+        border-radius: 15px;
+      }
     }
-  
+
     &__header {
-      font-size: 9vw;
       color: $rose_quartz;
       margin: 0px;
+      font-size: 48px;
     }
   
     &__span {
@@ -30,9 +47,10 @@
 
     &__quote {
         color: $snow_white;
-        width: 50%;
+        width: 80%;
         margin: auto;
         margin-top: 20px;
+        font-size: 14px;
     }
   
     // &__splashContainer {
