--- a/front-end/src/pages/Home.scss
+++ b/front-end/src/pages/Home.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: space-between;
     min-height: 100%;
+    margin-top: -3%;
   
     &__firstPage {
       display: flex; 
