Moved login button to home page to mimic professional site, no longer in Nav bar. CSS changes and class changes

--- a/front-end/src/assets/utils/_colors.scss
+++ b/front-end/src/assets/utils/_colors.scss
@@ -1,5 +1,5 @@
 //base pink shades
-$rose_quartz: #F3B3C6; //this color is in between the two logo colors
+$rose_quartz: #F2A7C5; //this color is in between the two logo colors
 $logo_light_pink: #F7CDC9;
 $logo_dark_pink: #ED95C2;
 $cherry: #CD2D64;
